--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body>
+<body> 
 
     <p>paragraf</p>
+    <p>paragraf2</p>
+    
 </body>
 </html>
